Spark as optimizer engine (#54)
Spark Optimizer